# Vendomatic

./: README.md
back/: pyproject.toml
back/backend/: settings.py  urls.py
back/fixtures/: beverages.json  coins.json
back/inventory/: models.py  serializers.py  urls.py  views.py
back/inventory/migrations/: 0001_initial.py
back/inventory/tests/: test_buy_items.py  test_get_inventory.py
back/payment/: models.py  urls.py  views.py
back/payment/migrations/: 0001_initial.py
back/payment/tests/: test_delete_coins.py  test_get_coin_quantity.py  test_insert_coin.py
front/: package-lock.json  package.json
front/public/: manifest.json
front/src/: .env.development  index.js
front/src/components/Beverage/: index.js
front/src/components/BeverageList/: index.js
front/src/components/DeletionButton/: index.js
front/src/components/InsertionButton/: index.js
front/src/components/Text/: index.js
front/src/pages/: Vendomatic.js  VendomaticMainPage.js
front/src/utils/: axiosInstance.js
